Fix blue colored sections that are wrapped by <a id=""></a> tag

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -112,7 +112,7 @@ code pre {
         padding: 0;
 }
 
-a {
+a[href] {
         color: var(--tblue);
 }
 
